src/main/java/MalayalamParser.java
// Generated from Malayalam.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MalayalamParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		TYPES=1, LPAREN=2, RPAREN=3, LBRACE=4, RBRACE=5, LBRACK=6, RBRACK=7, SEMI=8, 
		COMMA=9, DOT=10, ASSIGN=11, GT=12, LT=13, BANG=14, TILDE=15, QUESTION=16, 
		COLON=17, EQUAL=18, LE=19, GE=20, NOTEQUAL=21, AND=22, OR=23, INC=24, 
		DEC=25, ADD=26, SUB=27, MUL=28, DIV=29, BITAND=30, BITOR=31, CARET=32, 
		MOD=33, ARROW=34, COLONCOLON=35, ADD_ASSIGN=36, SUB_ASSIGN=37, MUL_ASSIGN=38, 
		DIV_ASSIGN=39, AND_ASSIGN=40, OR_ASSIGN=41, XOR_ASSIGN=42, MOD_ASSIGN=43, 
		LSHIFT_ASSIGN=44, RSHIFT_ASSIGN=45, URSHIFT_ASSIGN=46, TRUE=47, FALSE=48, 
		NIL=49, AANENKIL=50, ATHAVA=51, ALLENKIL=52, AAYIRIKKUMPOL=53, PATHIKKUKA=54, 
		SWEEKARIKKUKA=55, SAMKHYA=56, BHINNA=57, ID=58, INT=59, FLOAT=60, STRING=61, 
		WS=62, COMMENT=63, LINE_COMMENT=64, OTHER=65;
	public static final int
		RULE_program = 0, RULE_statements = 1, RULE_statement = 2, RULE_block = 3, 
		RULE_assignment = 4, RULE_aanenkilStatement = 5, RULE_aayirikkumbolStatement = 6, 
		RULE_pathikkukaStatement = 7, RULE_sweekarikkukaStatement = 8, RULE_expr = 9, 
		RULE_conditionalExpr = 10, RULE_conditionalOrExpr = 11, RULE_conditionalAndExpr = 12, 
		RULE_inclusiveOrExpr = 13, RULE_exclusiveOrExpr = 14, RULE_andExpr = 15, 
		RULE_equalityExpr = 16, RULE_relationalExpr = 17, RULE_shiftExpr = 18, 
		RULE_additiveExpr = 19, RULE_multiplicativeExpr = 20, RULE_unaryExpr = 21, 
		RULE_preIncrementExpression = 22, RULE_preDecrementExpression = 23, RULE_unaryExprNotPlusMinus = 24, 
		RULE_postfixExpression = 25, RULE_postIncrementExpression = 26, RULE_postIncrementExpression_lf_postfixExpression = 27, 
		RULE_postDecrementExpression = 28, RULE_postDecrementExpression_lf_postfixExpression = 29, 
		RULE_castExpression = 30, RULE_atom = 31;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "statements", "statement", "block", "assignment", "aanenkilStatement", 
			"aayirikkumbolStatement", "pathikkukaStatement", "sweekarikkukaStatement", 
			"expr", "conditionalExpr", "conditionalOrExpr", "conditionalAndExpr", 
			"inclusiveOrExpr", "exclusiveOrExpr", "andExpr", "equalityExpr", "relationalExpr", 
			"shiftExpr", "additiveExpr", "multiplicativeExpr", "unaryExpr", "preIncrementExpression", 
			"preDecrementExpression", "unaryExprNotPlusMinus", "postfixExpression", 
			"postIncrementExpression", "postIncrementExpression_lf_postfixExpression", 
			"postDecrementExpression", "postDecrementExpression_lf_postfixExpression", 
			"castExpression", "atom"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "','", "'.'", 
			"'='", "'>'", "'<'", "'!'", "'~'", "'?'", "':'", "'=='", "'<='", "'>='", 
			"'!='", "'&&'", "'||'", "'++'", "'--'", "'+'", "'-'", "'*'", "'/'", "'&'", 
			"'|'", "'^'", "'%'", "'->'", "'::'", "'+='", "'-='", "'*='", "'/='", 
			"'&='", "'|='", "'^='", "'%='", "'<<='", "'>>='", "'>>>='", "'true'", 
			"'false'", "'nil'", "'\u0D06\u0D23\u0D46\u0D19\u0D4D\u0D15\u0D3F\u0D32\u0D4D\u200D'", 
			"'\u0D05\u0D25\u0D35\u0D3E'", "'\u0D05\u0D32\u0D4D\u0D32\u0D46\u0D19\u0D4D\u0D15\u0D3F\u0D32\u0D4D\u200D'", 
			"'\u0D06\u0D2F\u0D3F\u0D30\u0D3F\u0D15\u0D4D\u0D15\u0D41\u0D2E\u0D4D\u0D2A\u0D4B\u0D33\u0D4D\u200D'", 
			"'\u0D2A\u0D24\u0D3F\u0D15\u0D4D\u0D15\u0D41\u0D15'", "'\u0D38\u0D4D\u0D35\u0D40\u0D15\u0D30\u0D3F\u0D15\u0D4D\u0D15\u0D41\u0D15'", 
			"'\u0D38\u0D02\u0D16\u0D4D\u0D2F'", "'\u0D2D\u0D3F\u0D28\u0D4D\u0D28'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "TYPES", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
			"SEMI", "COMMA", "DOT", "ASSIGN", "GT", "LT", "BANG", "TILDE", "QUESTION", 
			"COLON", "EQUAL", "LE", "GE", "NOTEQUAL", "AND", "OR", "INC", "DEC", 
			"ADD", "SUB", "MUL", "DIV", "BITAND", "BITOR", "CARET", "MOD", "ARROW", 
			"COLONCOLON", "ADD_ASSIGN", "SUB_ASSIGN", "MUL_ASSIGN", "DIV_ASSIGN", 
			"AND_ASSIGN", "OR_ASSIGN", "XOR_ASSIGN", "MOD_ASSIGN", "LSHIFT_ASSIGN", 
			"RSHIFT_ASSIGN", "URSHIFT_ASSIGN", "TRUE", "FALSE", "NIL", "AANENKIL", 
			"ATHAVA", "ALLENKIL", "AAYIRIKKUMPOL", "PATHIKKUKA", "SWEEKARIKKUKA", 
			"SAMKHYA", "BHINNA", "ID", "INT", "FLOAT", "STRING", "WS", "COMMENT", 
			"LINE_COMMENT", "OTHER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Malayalam.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MalayalamParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode EOF() { return getToken(MalayalamParser.EOF, 0); }
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64);
			statements();
			setState(65);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementsContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public StatementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterStatements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitStatements(this);
		}
	}

	public final StatementsContext statements() throws RecognitionException {
		StatementsContext _localctx = new StatementsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(67);
				statement();
				}
				}
				setState(70); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 2)) & ~0x3f) == 0 && ((1L << (_la - 2)) & ((1L << (LPAREN - 2)) | (1L << (LBRACE - 2)) | (1L << (BANG - 2)) | (1L << (TILDE - 2)) | (1L << (INC - 2)) | (1L << (DEC - 2)) | (1L << (ADD - 2)) | (1L << (SUB - 2)) | (1L << (TRUE - 2)) | (1L << (FALSE - 2)) | (1L << (NIL - 2)) | (1L << (PATHIKKUKA - 2)) | (1L << (ID - 2)) | (1L << (INT - 2)) | (1L << (FLOAT - 2)) | (1L << (STRING - 2)) | (1L << (OTHER - 2)))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StatementContext extends ParserRuleContext {
		public Token OTHER;
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AanenkilStatementContext aanenkilStatement() {
			return getRuleContext(AanenkilStatementContext.class,0);
		}
		public AayirikkumbolStatementContext aayirikkumbolStatement() {
			return getRuleContext(AayirikkumbolStatementContext.class,0);
		}
		public PathikkukaStatementContext pathikkukaStatement() {
			return getRuleContext(PathikkukaStatementContext.class,0);
		}
		public SweekarikkukaStatementContext sweekarikkukaStatement() {
			return getRuleContext(SweekarikkukaStatementContext.class,0);
		}
		public TerminalNode OTHER() { return getToken(MalayalamParser.OTHER, 0); }
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitStatement(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_statement);
		try {
			setState(80);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(72);
				block();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(73);
				assignment();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(74);
				aanenkilStatement();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				aayirikkumbolStatement();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(76);
				pathikkukaStatement();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(77);
				sweekarikkukaStatement();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(78);
				((StatementContext)_localctx).OTHER = match(OTHER);
				System.err.println("unknown character: " + (((StatementContext)_localctx).OTHER!=null?((StatementContext)_localctx).OTHER.getText():null));
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockContext extends ParserRuleContext {
		public TerminalNode LBRACE() { return getToken(MalayalamParser.LBRACE, 0); }
		public StatementsContext statements() {
			return getRuleContext(StatementsContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(MalayalamParser.RBRACE, 0); }
		public BlockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterBlock(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitBlock(this);
		}
	}

	public final BlockContext block() throws RecognitionException {
		BlockContext _localctx = new BlockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(LBRACE);
			setState(83);
			statements();
			setState(84);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignmentContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MalayalamParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(MalayalamParser.ASSIGN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MalayalamParser.SEMI, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterAssignment(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitAssignment(this);
		}
	}

	public final AssignmentContext assignment() throws RecognitionException {
		AssignmentContext _localctx = new AssignmentContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_assignment);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			match(ID);
			setState(87);
			match(ASSIGN);
			setState(88);
			expr();
			setState(89);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AanenkilStatementContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> AANENKIL() { return getTokens(MalayalamParser.AANENKIL); }
		public TerminalNode AANENKIL(int i) {
			return getToken(MalayalamParser.AANENKIL, i);
		}
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<TerminalNode> ATHAVA() { return getTokens(MalayalamParser.ATHAVA); }
		public TerminalNode ATHAVA(int i) {
			return getToken(MalayalamParser.ATHAVA, i);
		}
		public TerminalNode ALLENKIL() { return getToken(MalayalamParser.ALLENKIL, 0); }
		public AanenkilStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aanenkilStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterAanenkilStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitAanenkilStatement(this);
		}
	}

	public final AanenkilStatementContext aanenkilStatement() throws RecognitionException {
		AanenkilStatementContext _localctx = new AanenkilStatementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_aanenkilStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			expr();
			setState(92);
			match(AANENKIL);
			setState(93);
			block();
			setState(101);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ATHAVA) {
				{
				{
				setState(94);
				match(ATHAVA);
				setState(95);
				expr();
				setState(96);
				match(AANENKIL);
				setState(97);
				block();
				}
				}
				setState(103);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ALLENKIL) {
				{
				setState(104);
				match(ALLENKIL);
				setState(105);
				block();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AayirikkumbolStatementContext extends ParserRuleContext {
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode AAYIRIKKUMPOL() { return getToken(MalayalamParser.AAYIRIKKUMPOL, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public AayirikkumbolStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aayirikkumbolStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterAayirikkumbolStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitAayirikkumbolStatement(this);
		}
	}

	public final AayirikkumbolStatementContext aayirikkumbolStatement() throws RecognitionException {
		AayirikkumbolStatementContext _localctx = new AayirikkumbolStatementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_aayirikkumbolStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			expr();
			setState(109);
			match(AAYIRIKKUMPOL);
			setState(110);
			block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PathikkukaStatementContext extends ParserRuleContext {
		public TerminalNode PATHIKKUKA() { return getToken(MalayalamParser.PATHIKKUKA, 0); }
		public TerminalNode LPAREN() { return getToken(MalayalamParser.LPAREN, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(MalayalamParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(MalayalamParser.SEMI, 0); }
		public PathikkukaStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pathikkukaStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterPathikkukaStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitPathikkukaStatement(this);
		}
	}

	public final PathikkukaStatementContext pathikkukaStatement() throws RecognitionException {
		PathikkukaStatementContext _localctx = new PathikkukaStatementContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pathikkukaStatement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			match(PATHIKKUKA);
			setState(113);
			match(LPAREN);
			setState(114);
			expr();
			setState(115);
			match(RPAREN);
			setState(116);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SweekarikkukaStatementContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(MalayalamParser.ID, 0); }
		public TerminalNode ASSIGN() { return getToken(MalayalamParser.ASSIGN, 0); }
		public TerminalNode SWEEKARIKKUKA() { return getToken(MalayalamParser.SWEEKARIKKUKA, 0); }
		public TerminalNode LPAREN() { return getToken(MalayalamParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(MalayalamParser.RPAREN, 0); }
		public TerminalNode SEMI() { return getToken(MalayalamParser.SEMI, 0); }
		public TerminalNode STRING() { return getToken(MalayalamParser.STRING, 0); }
		public SweekarikkukaStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sweekarikkukaStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterSweekarikkukaStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitSweekarikkukaStatement(this);
		}
	}

	public final SweekarikkukaStatementContext sweekarikkukaStatement() throws RecognitionException {
		SweekarikkukaStatementContext _localctx = new SweekarikkukaStatementContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_sweekarikkukaStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(ID);
			setState(119);
			match(ASSIGN);
			setState(120);
			match(SWEEKARIKKUKA);
			setState(121);
			match(LPAREN);
			setState(123);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==STRING) {
				{
				setState(122);
				match(STRING);
				}
			}

			setState(125);
			match(RPAREN);
			setState(126);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public ConditionalExprContext conditionalExpr() {
			return getRuleContext(ConditionalExprContext.class,0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MalayalamListener ) ((MalayalamListener)listener).exitExpr(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_expr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			conditionalExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
